Added react router to App.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,6 @@
   "parser": "babel-eslint",
   "rules": {
     "comma-dangle": ["error", "never"],
-    "arrow-parens": [2, "as-needed", { "requireForBlockBody": "false" }]
+    "arrow-parens": [2, "as-needed", { "requireForBlockBody": false }]
   }
 }
